Homework 3: question 9.3 answered

--- a/exercises/homework-03/homework-3-textbook-problems.ipynb
+++ b/exercises/homework-03/homework-3-textbook-problems.ipynb
@@ -8,6 +8,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9.3\n",
+    "$\\hat{y} = 61.4 + 2.4x$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def haty(x):\n",
+    "    return 61.4 + (2.4*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "181.4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "haty(50)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
