Week 9: video lecture notes, through all chapter sections

--- a/week-09/linear-regression-and-correlation-in-python.ipynb
+++ b/week-09/linear-regression-and-correlation-in-python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Regression and Correlation (in Python)\n",
+    "# Linear Regression and Correlation\n",
     "What is the association between two quantitative variables?   \n",
     "What is the strength of association (correlation) between the two variables?   "
    ]
@@ -53,7 +53,7 @@
    "source": [
     "The equation for a straight line:\n",
     "\n",
-    "$y = \\alpha + \\beta x$\n",
+    "$$y = \\alpha + \\beta x$$\n",
     "\n",
     "The **slope** is how \"steep\" the line is and is denoted by $\\beta$.  \n",
     "The **intercept** is where the line crosses the y-axis (when $x = 0$) and is denoted by $\\alpha$."
@@ -181,7 +181,7 @@
     "### Prediction Equation\n",
     "The prediction equation for a line:\n",
     "\n",
-    "$\\hat{y} = a+bx$\n",
+    "$$\\hat{y} = a+bx$$\n",
     "\n",
     "Y-hat denotes the fact that we use sample data to estimate the slope and intercept for the equation. Using this equation we can obtain a predicted value of the response variable for any given of $x$ as long as we know the slope and intercept."
    ]
@@ -194,14 +194,14 @@
     "\n",
     "To obtain the y-intercept $a$:\n",
     "\n",
-    "$a = \\bar{y} + b \\bar{x}$\n",
+    "$$a = \\bar{y} + b \\bar{x}$$\n",
     "\n",
     "where $\\bar{y}$ denotes the average value of the response variable (dependent variable)   \n",
     "and $\\bar{x}$ is the average value of $x$ across all data points in your sample\n",
     "\n",
     "to obtain the slope $b$:\n",
     "\n",
-    "$b = \\frac{\\sum (x - \\bar{x})(y - \\bar{y})}{\\sum (x - \\bar{x})^{2}}$\n",
+    "$$b = \\frac{\\sum (x - \\bar{x})(y - \\bar{y})}{\\sum (x - \\bar{x})^{2}}$$\n",
     "\n",
     "In the numerator we are summing the product of the difference of all $x$ values and the average $x$ value $\\bar{x}$, and the difference of all $y$ values and the average $y$ value $\\bar{y}$.\n",
     "\n",
@@ -292,7 +292,7 @@
    "source": [
     "### Regression Function\n",
     "\n",
-    "$E(y) = \\alpha + \\beta x$\n",
+    "$$E(y) = \\alpha + \\beta x$$\n",
     "\n",
     "This shows the relationship between $x$ and the mean of the conditional distribution of $y$. It is called a linear regression function because it uses a straight line to relate the mean of $y$ to the values of $x$.\n",
     "\n",
@@ -320,7 +320,7 @@
     "- identical at the variaous values of $x$\n",
     "- normally distributed around $x$\n",
     "\n",
-    "$s = \\sqrt{\\frac{SSE}{n-2}} = \\sqrt{\\frac{\\sum(y - \\hat{y})^{2}}{n-2}}$\n",
+    "$$s = \\sqrt{\\frac{SSE}{n-2}} = \\sqrt{\\frac{\\sum(y - \\hat{y})^{2}}{n-2}}$$\n",
     "\n",
     "At any fixed value of $x$, our model predicts that $y$ varies around a mean $E(y)$ with a standard deviation $s$.\n",
     "\n",
@@ -341,6 +341,213 @@
    "metadata": {},
    "source": [
     "## Measuring Linear Association: The Correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The slope in a regression line tells us the direction of an association between two variables, but not its strength.\n",
+    "\n",
+    "Correlation tells us about the **strength of linear association** between two variables. \n",
+    "\n",
+    "The slope of a line, $b$, depends on the units of measurement.\n",
+    "\n",
+    "Correlation is the value the slope would take if both $x$ and $y$ variables had equal standard deviations. In other words, it standardizes the measure of association so that they do not depend on the unit of meaurement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculating Correlation\n",
+    "We can calculate the standard deviation of $x$ and $y$\n",
+    "\n",
+    "$$s_{x} = \\sqrt{\\frac{\\sum(x - \\bar{x})^{2}}{n-1}}$$\n",
+    "\n",
+    "$$s_{y} = \\sqrt{\\frac{\\sum(y - \\bar{y})^{2}}{n-1}}$$\n",
+    "\n",
+    "The correlation, denoted by $r$, relates to the slope $b$ of the prediction equation by:\n",
+    "\n",
+    "$$r = \\left ( \\frac{s_{x}}{s_{y}} \\right ) b$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Properties of the Correlation\n",
+    "- measures the **strenth of linear association** between $x$ and $y$\n",
+    "- correlation must fall between -1 and 1, $-1 \\le r \\le 1$\n",
+    "  - a correlation of -1 occurs when two variables are perfectly negatively correlated with each other\n",
+    "  - a correlation of 1 occurs when two variables are perfectly positively correlated with each other\n",
+    "- correlation has the same sign as the slope\n",
+    "  - if two variables are negatively correlated, that means on average when you see an increase in one of the variables you see a decrease in the other\n",
+    "  - a positive sign on the slope means a positive sign on the correlation, so when you see an increase in one variable you tend to also see an increase in the other variable\n",
+    "- when $b = 0$, $r = 0$\n",
+    "- $r = \\pm 1$ when all sample points fall exactly on the prediction line.\n",
+    "  - They correspond to perfect positive and negative linear associations where there is no prediction error.\n",
+    "- the larger the absolute value of $r$, the stronger the linear association\n",
+    "- correlation treats $x$ and $y$ Symmetrically, unlike the slope\n",
+    "- value of $r$ does not depend on the variables' units of observation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation is Useful\n",
+    "Correlation is useful because it allows us to compare the strength of association across multiple variables.\n",
+    "\n",
+    "Example:\n",
+    "- we can have two linear regression equations\n",
+    "  - one for the relationship between murder rate and poverty rate\n",
+    "  - $y = 210 + 25x$\n",
+    "  - and another for the relatioship between murder rate and percentage of residents who are high school graduates\n",
+    "  - $y = 1756 - 16x$\n",
+    "- just looking at these equations, we cannot tell whether highschool graduation rates or poverty rate is more strongly associated with murder rates\n",
+    "- but if the correlation bbetween murder rate and poverty is 0.63, and the correlation between murder rate and high school graduation rates is -0.30, we know that the strength of association between merder rate and poverty is higher"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### R-Squared: How well can $x$ predict $y$?\n",
+    "We want to know how well our regression equation performs: how well can $x$ predict $y$? To what extent does variation in $x$ predict variation in $y$?\n",
+    "\n",
+    "One way to assess this is by looking at the **r-squared** statistic, which measures the proportional reduction in prediction error that we get by modelling $y$ from $x$, rather than just using the average of $y$ as a prediction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Rule 1** (predicting $y$ without using $x$): the best predictor is $\\bar{y}$, the sample mean.\n",
+    "\n",
+    "$$E_{1} = TSS = \\sum (y - \\bar{y})^{2}$$\n",
+    "\n",
+    "TSS = Total Sum of Squares\n",
+    "\n",
+    "**Rule 2** (predicting $y$ using $x$): when the relationship between $x$ and $y$ is linear, the prediction equation $\\hat{y} = a + bx$ provides the best predictor of $y$. For each subject, substituting the $x$-value into this equation provides the predicted value of $y$.\n",
+    "\n",
+    "$$E_{2} = SSE = \\sum (y - \\hat{y})^{2}$$\n",
+    "\n",
+    "SSE = Sum of Square Error, or Residual Sum of Squares\n",
+    "\n",
+    "(Agresti, 4ed, Chapter 9, section 4, pp. 273-274; see specifically figure 9.13 and surrounding descriptive text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The proportional reduction in error from using the linear prediction equation instead of $\\bar{y}$ (the sample mean) to predict $y$ is:\n",
+    "\n",
+    "$$r^{2} = \\frac{TSS - SSE}{TSS} = \\frac{\\sum (y - \\bar{y})^{2} - \\sum (y - \\hat{y})^{2}}{\\sum (y - \\bar{y})^{2}}$$\n",
+    "\n",
+    "This is known as **r-squared**, or the **coefficient of determination**.\n",
+    "\n",
+    "R-squared is the square of the correlation.\n",
+    "\n",
+    "The square of the correlation basically tells us the percent of variation explained when you use $x$ to predict $y$ rather than using an average value of $y$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interpreting R-Squared\n",
+    "(see example 9.9 in textbook)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Properties of R-Squared\n",
+    "- r-squared falls between 0 and 1\n",
+    "- if there is no prediction error, then r-squared = 1\n",
+    "- r-squared = 0 when there is no relationship (b = 0) between $x$ and $y$\n",
+    "- r-squared measures the strength of linear association"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inference for The Slope and Correlation\n",
+    "Assumptions for Statistical Inference:\n",
+    "- the study uses randomization, such as simple random sample in a survey\n",
+    "- the mean of $y$ is related to $x$ by the linear equation: $E(y) = \\alpha + \\beta x$\n",
+    "- the conditional standard deviation $\\sigma$ is identical at each $x$-value\n",
+    "- the condirtional distribution of $y$ at each value of $x$ is normal\n",
+    "\n",
+    "According to the first assumption the data represent a random sample, whereas the second assumption implies that the linear regression function is valid. These two are the most important of the four assumptions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test of Independence\n",
+    "If the normal conditional distribution of $y$ is the same at each $x$ value, then the two quantitative variables are statistically independent. For the regression function $E(y) = \\alpha + \\beta x$, this means that the slope $\\beta$ is zero. The null hypothesis is that the variables are statistically independent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can test independence against $H_{a}: \\beta \\ne 0$, or a one-sided alternative to predict the direction of the association. The test statistic equals:\n",
+    "\n",
+    "$$t = \\frac{b}{se}$$\n",
+    "\n",
+    "The formula for the standard error is:\n",
+    "\n",
+    "$$se = \\frac{s}{\\sqrt{\\sum (x - \\bar{x})^{2}}}$$\n",
+    "where\n",
+    "$$s = \\sqrt{\\frac{SSE}{n-2}}$$\n",
+    "\n",
+    "A small $s$ occurs when the data points show little variability about the prediction equation. Also, the standard error of $b$ is inversely related to $\\sqrt{\\sum (x - \\bar{x})^{2}}$. This sum incxreases as the sample size increases. The $se$ also decreases when the $x$-values are more highly spread out."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The P-value for $H_{a}: \\beta \\ne 0$ is the two-tail probability from the t-distribution. For large $df$ (degrees of freedom), the t-distribution is similar to the standard normal, so the P-value can be approximated using the normal probability table."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confidence Interval for the Slope\n",
+    "A small P-value for $H_{0}: \\beta = 0$ suggests that the regression line has a non-zero slope. A confidence interval for $\\beta$ has the formula:\n",
+    "\n",
+    "$$b \\pm t(se)$$\n",
+    "\n",
+    "Recall, the null hypothesis is asserting $\\beta = 0$, and so if 0 does not fall within the resulting confidence interval we may reject the null hypothesis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference for the Correlation\n",
+    "The test statistic for testing $H_{0}: \\rho = 0$ is:\n",
+    "\n",
+    "$$t = \\frac{r}{\\sqrt{(1-r^{2})/(n-2)}}$$\n",
+    "\n",
+    "This provides the same value as the test statistic $t = \\frac{b}{se}$, since both test essentially the same hypothesis, with the same degrees of freedom."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Assumptions and Violations\n",
+    "(see lecture video and Agresti chapter 9.6)"
    ]
   },
   {
