--- a/week-09/linear-regression-and-correlation-in-python.ipynb
+++ b/week-09/linear-regression-and-correlation-in-python.ipynb
@@ -388,7 +388,7 @@
     "- $r = \\pm 1$ when all sample points fall exactly on the prediction line.\n",
     "  - They correspond to perfect positive and negative linear associations where there is no prediction error.\n",
     "- the larger the absolute value of $r$, the stronger the linear association\n",
-    "- correlation treats $x$ and $y$ Symmetrically, unlike the slope\n",
+    "- correlation treats $x$ and $y$ symmetrically, unlike the slope\n",
     "- value of $r$ does not depend on the variables' units of observation"
    ]
   },
